# refmd

./: .env.example  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  openapi-scrap-addon.yaml  openapi.yaml
api/.sqlx/: query-03e4c34b4047958d5ae6ffdfd956084f9a78d5ed0faf94671ca7716613c565b2.json  query-08669a638ed8d8442bc57dfea91257dbb0f574320e73d627d0e4d466a8adf3ea.json  query-08f6233da399dbe2e90cb012d1d2afd2e89da29735398bb070e642b82069ec92.json  query-0c2fba374267558b0856837270467ed3ee8f3c8ddea275de6eefc939e436abb6.json  query-0c6341b9ac440430d5d4f244eaae3d06bc2d14f1b505723e6ec615f263b8124d.json  query-1173a1c3fa82903cb9b6442157325488a3fd2c582785bbbb32abdfd066f9afb4.json  query-13a95ac79809e3090d1ec0634006b5cb634b1a8024d2cd64af89a8bc1bc58622.json  query-145ed74b860eed9b5f77bcc68744c0a8a316b2a405d2e4ab8aab24d1049ef49e.json  query-15ee0f821ba0a34af3658df289abf6b6f65ef2afada518eec4084a76216a7ae3.json  query-18498a15e9e30040ac4cf971e8c92f5f32385cc8defc73c84818492d9e3ddc64.json  query-18d66561023753c5ad7023e2339b637790ae651e4c44c92907cda172dfef126e.json  query-18e1bebf09663ffc738e0bfb666fdbc8d2239c18716fc4a1a6a5278093479586.json  query-1c5777a048b12ecbf8fd98c86cc62d2f604dc27a3960db1f41cbb49227f112a7.json  query-20bac31499058b5a74dfdfe7fc7fc6de1b9d11f9b78216293adb773c10a82353.json  query-2145dab0efd93004469b218cea323f9704e47e07fff1e4db610890bedf56b147.json  query-22e3888da9a519aa9262dc3115291e65c6bbef5f91a9ed7aff50a1f0e2dc3aa4.json  (+88 more)
api/scripts/: generate-openapi.sh
(+316 files in other folders)
